--- a/src/sass/components/alert.scss
+++ b/src/sass/components/alert.scss
@@ -3,12 +3,24 @@
   border: 1px solid #cfd8dc;
   background-color: $gray;
 
+  @media (max-width: $tablet) {
+    padding: 15px;
+  }
+
+  @media (max-width: $desktop) {
+    padding: 25px;
+  }
+
   &__title {
     margin: 0;
     margin-bottom: 20px;
     font-family: $montserrat;
     font-size: 18px;
     font-weight: 400;
+
+    @media (max-width: $tablet) {
+      font-size: 16px;
+    }
   }
 
   &__text {
