--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -59,7 +59,7 @@
 @import "components/test-answers";
 @import "components/test-complete";
 @import "components/test-result";
-@import "components/сourses-list";
+@import "components/courses-list";
 @import "components/course-preview";
 @import "components/profile-view";
 @import "components/form";
