--- a/src/sass/components/course-preview.scss
+++ b/src/sass/components/course-preview.scss
@@ -17,22 +17,28 @@
     font-size: 13px;
 
     &--1 {
-      width: 9%;
+      width: 10%;
+
+      @media (max-width: $desktop) {
+        width: 13%;
+      }
 
       @media (max-width: $tablet) {
         float: left;
         width: 25%;
       }
+
     }
 
     &--2 {
-      width: 73%;
+      width: 72%;
       font-size: 0;
 
       @media (max-width: $desktop) {
         box-sizing: border-box;
         padding: 0 20px;
         vertical-align: top;
+        width: 69%;
       }
 
       @media (max-width: $tablet) {
@@ -82,6 +88,51 @@
         width: 100%;
         margin-top: 15px;
       }
+    }
+
+    &--4 {
+      width: 56%;
+      font-size: 0;
+
+      @media (max-width: $tablet) {
+        box-sizing: border-box;
+        width: 75%;
+        padding-left: 10px;
+      }
+    }
+
+    &--4-1 {
+      width: 83%;
+      font-size: 13px;
+
+      @media (max-width: $desktop) {
+        width: 100%;
+      }
+    }
+
+    &--4-2 {
+      width: 17%;
+      text-align: right;
+      font-size: 13px;
+      color: #4C4F5E;
+
+      @media (max-width: $desktop) {
+        width: 100%;
+        text-align: left;
+      }
+    }
+
+    &--5 {
+      width: 34%;
+      text-align: right;
+
+      @media (max-width: $desktop) {
+        width: 100%;
+      }
+    }
+
+    &--6 {
+
     }
   }
 
@@ -137,6 +188,7 @@
         bottom: 0;
         left: 0;
         z-index: 10;
+        border-radius: 5px;
         background-color: transparentize($red, 0.5);
         content: "";
       }
@@ -184,6 +236,32 @@
       span {
         display: block;
       }
+    }
+  }
+
+  &__time {
+    padding: 0;
+    margin: 0;
+  }
+
+  &__instr {
+    color: #4C4F5E;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .progress-line {
+
+    @media (max-width: $tablet) {
+      padding-top: 10px;
+    }
+
+    @media (max-width: $desktop) {
+      text-align: left;
+      padding-top: 15px;
     }
   }
 }
