--- a/src/sass/components/course-section.scss
+++ b/src/sass/components/course-section.scss
@@ -13,6 +13,7 @@
     line-height: 1.3;
 
     @media (max-width: $tablet) {
+      font-size: 20px;
       margin-bottom: 15px;
     }
     @media (min-width: $desktop) {
@@ -52,5 +53,9 @@
 
   &__aside {
     float: right;
+
+    @media (max-width: $desktop) {
+      float: none;
+    }
   }
 }
