--- a/src/sass/components/status-text.scss
+++ b/src/sass/components/status-text.scss
@@ -2,6 +2,10 @@
   margin-bottom: 15px;
   font-size: 16px;
 
+  @media (max-width: $tablet) {
+    font-size: 14px;
+  }
+
   &::before {
     display: inline-block;
     width: 10px;
