added new component with bg-pattern, customized page-header for better using

--- a/src/sass/components/collapse.scss
+++ b/src/sass/components/collapse.scss
@@ -61,6 +61,14 @@
         margin-bottom: 0;
       }
     }
+
+    img,
+    video,
+    iframe {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   &--open &__header {
