--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,7 +30,6 @@
 @import "components/header";
 @import "components/menu";
 @import "components/logo";
-@import "components/course";
 @import "components/course-section";
 @import "components/user-courses";
 @import "components/notice-text";
@@ -39,7 +38,6 @@
 @import "components/link-with-number";
 @import "components/courses-list";
 @import "components/announce-alert";
-@import "components/course";
 @import "components/course-section";
 @import "components/course-base";
 @import "components/course-brief";
@@ -72,6 +70,7 @@
 @import "components/form-alert";
 @import "components/instructors";
 @import "components/progress-line";
+@import "components/page-body";
 
 /*=== страницы ===*/
 @import "pages/layout";
