--- a/src/sass/components/page-header.scss
+++ b/src/sass/components/page-header.scss
@@ -1,6 +1,5 @@
 .page-header {
-  padding: 50px 0 50px;
-  border-bottom: 1px solid #cfd8dc;
+  padding: 50px 0;
   background-color: $gray;
   background-image: url("../img/bg-pattern.png");
 
@@ -8,9 +7,20 @@
     background-color: $sand;
   }
 
-  &--with-tab {
-    padding-bottom: 0;
-    border-bottom: 0;
+  &--with-line {
+    border-bottom: 1px solid #cfd8dc;
+  }
+
+  &--courses {
+    padding: 50px 0 0;
+  }
+
+  &--course {
+    padding: 30px 0 0;
+  }
+
+  &--message-form {
+    padding: 20px 0;
   }
 
   &__title {
@@ -22,7 +32,5 @@
     margin: 0;
   }
 
-  &--message-form {
-    padding: 20px 0;
-  }
+
 }
