--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -71,6 +71,7 @@
 @import "components/instructors";
 @import "components/progress-line";
 @import "components/page-body";
+@import "components/profile-edit";
 
 /*=== страницы ===*/
 @import "pages/layout";
