--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -149,6 +149,10 @@
     }
   }
 
+  &--edit {
+    padding: 7px 20px;
+  }
+
   &--icon {
     padding: 4px 8px;
     border-radius: 3px;
@@ -386,5 +390,20 @@
     &:active {
       background-color: darken($orange, 2.5%);
     }
+  }
+
+  &--pull-right {
+    float: right;
+  }
+
+  &--close {
+    position: absolute;
+    right: -7px;
+    top: -7px;
+    width: 15px;
+    height: 15px;
+    border: none;
+    background: url('../img/svg/close-icon.svg') 50% 50% no-repeat;
+    background-size: 15px;
   }
 }
