--- a/src/sass/components/profile-edit.scss
+++ b/src/sass/components/profile-edit.scss
@@ -7,23 +7,82 @@
 		padding-right: 25px;
 
 		@include clearfix();
+
+		@media (max-width: $desktop) {
+	    width: 100%;
+	    padding-right: 0;
+	  }
 	}
 
 	&__title {
 		float: left;
 		margin: 0;
 		padding: 0;
+
+		@media (max-width: $tablet) {
+			font-size: 30px;
+		}
+	}
+
+	&__btn-top {
+		
+		@media (max-width: $tablet) {
+	    display: none;
+	  }
 	}
 
 	&__info {
 		float: left;
 		font-size: 0;
 		width: 78%;
+
+		@media (max-width: $desktop) {
+	    width: 100%;
+	    margin-bottom: 25px;
+	  }
+	}
+
+
+	&__password {
+		float: right;
+		width: 22%;
+		position: relative;
+
+		@media (max-width: $tablet) {
+			display: none;
+	    width: 100%;
+	  }
+
+		@media (max-width: $desktop) {
+			float: left;
+			width: 30%;
+	  }
+
+		&:before {
+			position: absolute;
+			content: '';
+			width: 1px;
+			height: 200px;
+			background: #B0BEC5;
+			left: 0;
+			top: 25px;
+
+			@media (max-width: $desktop) {
+		    display: none;
+		  }
+		}
 	}
 
 	&__col {
+		box-sizing: border-box;
 		display: inline-block;
 		vertical-align: top;
+		padding-right: 25px;
+
+		@media (max-width: $tablet) {
+	    width: 100%;
+	    padding-right: 0;
+	  }
 	}
 
 	&__col-1 {
@@ -32,17 +91,38 @@
 
 	&__col-2 {
 		width: 31%;
+
+		@media (max-width: $tablet) {
+	    display: none;
+	  }
 	}
 
 	&__col-3 {
 		width: 39%;
+
+		@media (max-width: $tablet) {
+	    display: none;
+	  }
+
+		@media (max-width: $desktop) {
+	    padding-right: 0;
+	  }
 	}
 
 	&__form-row {
-		padding: 13px 25px 0 0;
+		padding: 13px 0 0 0;
 
 		&--pass {
 			padding: 13px 0 0 25px;
+
+
+			@media (max-width: $tablet) {
+				padding-right: 0;
+			}
+
+			@media (max-width: $desktop) {
+				padding: 13px 25px 0 0;
+			}
 		}
 	}
 
@@ -51,9 +131,35 @@
 		min-height: 175px;
 		border: 1px solid $gray;
 		border-radius: 3px;
+		background-position: 50% 50%;
 		background-size: cover;
+		margin-top: 10px;
 		position: relative;
 		z-index: 1;
+
+		@media (max-width: $tablet) {
+			max-width: 60px;
+			min-height: 60px;
+		}
+	}
+
+	input[type=file] {
+		cursor: pointer;
+		opacity: 0;
+		margin: 0;
+		padding: 0;
+		width: 90px;
+		height: 30px;
+		position: absolute;
+		top: 48%;
+		left: 50%;
+		margin-left: -45px;
+		z-index: 10;
+
+		@media (max-width: $tablet) {
+			top: 0;
+			left: 205%;
+		}
 	}
 
 	&__upload-btn {
@@ -73,42 +179,33 @@
 		left: 50%;
 		margin-left: -45px;
 		z-index: 1;
+
+		@media (max-width: $tablet) {
+			top: 0;
+			left: 205%;
+		}
 	}
 
-	input[type=file] {
-		cursor: pointer;
-		opacity: 0;
-		margin: 0;
-		padding: 0;
-		width: 90px;
-		height: 30px;
-		position: absolute;
-		top: 48%;
-		left: 50%;
-		margin-left: -45px;
-		z-index: 10;
+	&__show-more {
+		display: none;
+		color: $base-text-color;
+		font-size: 14px;
+		text-decoration: none;
+		padding: 20px 0 0;
+
+		&:hover {
+			text-decoration: underline;
+		}
+
+		@media (max-width: $tablet) {
+	    display: block;
+	  }
 	}
 
 	&__btn-bottom {
 		margin-top: 20px;
 	}
 
-	&__password {
-		float: right;
-		width: 22%;
-		position: relative;
-
-		&:before {
-			position: absolute;
-			content: '';
-			width: 1px;
-			height: 200px;
-			background: #B0BEC5;
-			left: 0;
-			top: 25px;
-		}
-
-	}
 
 	label {
 		display: block;
