--- a/src/sass/components/course-preview.scss
+++ b/src/sass/components/course-preview.scss
@@ -102,7 +102,7 @@
     }
 
     &--4-1 {
-      width: 83%;
+      width: 80%;
       font-size: 13px;
 
       @media (max-width: $desktop) {
@@ -111,7 +111,7 @@
     }
 
     &--4-2 {
-      width: 17%;
+      width: 20%;
       text-align: right;
       font-size: 13px;
       color: #4C4F5E;
@@ -146,6 +146,14 @@
       width: 100%;
       height: auto;
       border-radius: 5px;
+    }
+
+    @media (max-width: $tablet) {
+      max-width: 130px;
+    }
+
+    @media (max-width: $tablet) {
+      max-width: 160px;
     }
 
     &--success {
@@ -214,7 +222,8 @@
   }
 
   &__title {
-    margin: 0;
+    display: block;
+    margin: 0 0 5px;
     color: $black;
     text-decoration: none;
     font-family: $montserrat;
@@ -230,13 +239,18 @@
     margin: 0;
     color: #78909c;
     font-family: $open-sans-semi-bold;
-    font-weight: 600;
+
+    &--inline {
+      display: inline;
+      padding: 0 5px;
+    }
 
     @media (max-width: $tablet) {
       span {
         display: block;
       }
     }
+
   }
 
   &__time {
