added page-header for page 'courses (admin)' without adaptive versions

--- a/src/sass/base/buttons.scss
+++ b/src/sass/base/buttons.scss
@@ -179,6 +179,13 @@
     padding: 7px 20px;
   }
 
+  &--add{
+    margin-top: 3px;
+    margin-left: 15px;
+    text-transform: none;
+    padding: 7px 20px;
+  }
+
   &--icon {
     padding: 4px 8px;
     border-radius: 3px;
@@ -416,10 +423,6 @@
     &:active {
       background-color: darken($orange, 2.5%);
     }
-  }
-
-  &--pull-right {
-    float: right;
   }
 
   &--close {
