--- a/src/sass/components/tooltip.scss
+++ b/src/sass/components/tooltip.scss
@@ -28,8 +28,8 @@
     content: "";
   }
 
-  &:hover:before,
-  &:hover:after {
+  &:hover::before,
+  &:hover::after {
     display: block;
   }
 }
