--- a/src/sass/components/user-courses.scss
+++ b/src/sass/components/user-courses.scss
@@ -13,14 +13,59 @@
     @include h1();
   }
 
+  &__stat {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  &__stat-group {
+    display: inline-block;
+    padding: 0 15px;
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: '';
+      width: 1px;
+      height: 40px;
+      background: #C0C7CC;
+      top: 7px;
+      right: -2px;
+    }
+
+    &:first-child {
+      padding-left: 0;
+    }
+
+    &:last-child::before {
+      display: none;
+    }
+  }
+
+  &__stat-item {
+    padding: 5px 0;
+    font-size: 15px;
+    line-height: 1.1;
+    color: #546E7A;
+  }
+
+  &__stat-count {
+    color: #37474F;
+  }
+
   &__link {
     margin-top: 10px;
 
     @media (min-width: $desktop) {
       margin-top: 0;
-      border: none;
+      border: 1px solid transparent;
       background: transparent;
       color: $base-text-color;
+    }
+
+    &:hover {
+      border: 1px solid #b0bbbf;
     }
   }
 
