--- a/src/sass/components/link-with-number.scss
+++ b/src/sass/components/link-with-number.scss
@@ -5,9 +5,15 @@
   font-family: $montserrat;
   font-size: 16px;
   font-weight: 400;
+  transition: all $time ease;
 
   &:hover {
     opacity: 0.8;
+  }
+
+  &:hover &__value{
+    background: $black;
+    color: #fff;
   }
 
   &__value {
@@ -25,6 +31,7 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 13px;
+    transition: all $time ease;
 
     @media (max-width: 768px) {
       margin-left: 5px;
