added page-header for page 'course (admin)' with adaptive versions

--- a/src/sass/components/course-base.scss
+++ b/src/sass/components/course-base.scss
@@ -32,6 +32,7 @@
 
     p {
       color: inherit;
+      margin-bottom: 10px;
     }
   }
 
@@ -94,4 +95,19 @@
     }
   }
 
+  &--admin {
+    width: 100%;
+  }
+  
+  &--admin &__descr{
+    padding-right: 50px;
+
+    @media (max-width: $tablet) {
+      padding-right: 0;
+    }
+  }
+
+  &--admin &__instr{
+    padding-top: 45px;
+  }
 }
