--- a/src/sass/components/status-text.scss
+++ b/src/sass/components/status-text.scss
@@ -30,6 +30,12 @@
     }
   }
 
+  &--progress {
+    &::before {
+      background-color: $yellow;
+    }
+  }
+
   &--warning {
     &::before {
       background-color: $orange;
