--- a/src/sass/components/user-courses.scss
+++ b/src/sass/components/user-courses.scss
@@ -114,6 +114,10 @@
     @media (max-width: $tablet) {
       margin-top: 45px;
     }
+
+    &--course-admin {
+      margin-top: 25px;
+    }
   }
 
   &__nav-item {
