--- a/src/sass/components/page-header.scss
+++ b/src/sass/components/page-header.scss
@@ -15,12 +15,16 @@
     border-bottom: 1px solid #cfd8dc;
   }
 
-  &--staff{
+  &--admin{
     padding: 0 0 50px;
 
     @media (max-width: $tablet) {
       padding: 0 0 35px;
     }
+  }
+
+  &--none{
+    padding: 0;
   }
 
   &--courses {
@@ -29,6 +33,10 @@
 
   &--course {
     padding: 30px 0 0;
+
+    @media (max-width: $tablet) {
+      padding-bottom: 0;
+    }
   }
 
   &--message-form {
