added new component 'alert-staff'

--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -254,6 +254,13 @@ p {
   color: $green;
 }
 
+.text-progress {
+  color: $yellow;
+}
+.text-warning {
+  color: $orange;
+}
+
 .text-danger {
   color: $red;
 }
