--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -72,6 +72,7 @@
 @import "components/progress-line";
 @import "components/page-body";
 @import "components/profile-edit";
+@import "components/alert-staff";
 
 /*=== страницы ===*/
 @import "pages/layout";
