added new component 'pagination'

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -73,6 +73,7 @@
 @import "components/page-body";
 @import "components/profile-edit";
 @import "components/alert-staff";
+@import "components/pagination";
 
 /*=== страницы ===*/
 @import "pages/layout";
