--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -74,6 +74,8 @@
 @import "components/profile-edit";
 @import "components/alert-staff";
 @import "components/pagination";
+@import "components/staff";
+@import "components/employees";
 
 /*=== страницы ===*/
 @import "pages/layout";
