--- a/src/sass/components/alert-staff.scss
+++ b/src/sass/components/alert-staff.scss
@@ -1,12 +1,27 @@
 .alert-staff {
-	padding: 15px 20px;
-	border: 1px solid #B0BEC5;
+  padding: 15px 20px;
+  border: 1px solid #B0BEC5;
 
-	span {
-		padding-right: 25px;
+  &__sum {
+    color: #455A64;
+    font-family: $open-sans-semi-bold;
+  }
 
-		&.pull-right {
-			padding-right: 0;
-		}
-	}
+  span {
+    padding-right: 25px;
+
+    &.pull-right {
+      padding-right: 0;
+    }
+  }
+
+  &--gray{
+    background: #ECEFF1;
+    border: 1px solid #ECEFF1;
+
+    .pull-right {
+      color: #7C8E96;
+    }
+  }
+  
 }
