completed page 'course (admin)'

--- a/src/sass/components/employees.scss
+++ b/src/sass/components/employees.scss
@@ -37,6 +37,11 @@
 		&--6 {
 			width: 8%;
 		}
+
+		&--7 {		//col 5 + 6
+			width: 30%;
+			text-align: right;
+		}
 	}
 
 	&__row {
@@ -138,6 +143,10 @@
 		@media (max-width: $tablet) {
 			width: 100%;
 			margin-top: 5px;
+		}
+
+		&--right {
+			float: right;
 		}
 	}
 
