--- a/src/sass/base/grid.scss
+++ b/src/sass/base/grid.scss
@@ -12,6 +12,14 @@
   padding-left: 30px;
 }
 
+.wrapper {
+  width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
 .container--small {
   max-width: 960px;
 }
@@ -788,14 +796,17 @@
 .container-fluid::before,
 .container-fluid::after,
 .row::before,
-.row::after {
+.row::after,
+.wrapper::before,
+.wrapper::after {
   display: table;
   content: " ";
 }
 .clearfix::after,
 .container::after,
 .container-fluid::after,
-.row::after {
+.row::after,
+.wrapper::after {
   clear: both;
 }
 .center-block {
