--- a/src/sass/components/logo.scss
+++ b/src/sass/components/logo.scss
@@ -20,3 +20,13 @@
     }
   }
 }
+
+.fixed {
+  .logo {
+    @media (max-width: $tablet) {
+      &__second {
+        display: inline;
+      }
+    }
+  }
+}
