added component edit-nav for edit pages

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -76,6 +76,7 @@
 @import "components/pagination";
 @import "components/staff";
 @import "components/employees";
+@import "components/edit-nav";
 
 /*=== страницы ===*/
 @import "pages/layout";
