added new component btw-action

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -77,6 +77,7 @@
 @import "components/staff";
 @import "components/employees";
 @import "components/edit-nav";
+@import "components/btn-action";
 
 /*=== страницы ===*/
 @import "pages/layout";
