changed element with tab navigation into the component nav-tabs

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -78,6 +78,8 @@
 @import "components/employees";
 @import "components/edit-nav";
 @import "components/btn-action";
+@import "components/edit-area";
+@import "components/nav-tabs";
 
 /*=== страницы ===*/
 @import "pages/layout";
