--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -80,6 +80,7 @@
 @import "components/btn-action";
 @import "components/edit-area";
 @import "components/nav-tabs";
+@import "components/edit-area-alert";
 
 /*=== страницы ===*/
 @import "pages/layout";
