added components checkbox, select; finished left column for edit-course component

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -81,6 +81,8 @@
 @import "components/edit-area";
 @import "components/nav-tabs";
 @import "components/edit-area-alert";
+@import "components/edit-course";
+@import "components/checkbox";
 
 /*=== страницы ===*/
 @import "pages/layout";
