--- a/src/sass/components/edit-course.scss
+++ b/src/sass/components/edit-course.scss
@@ -1,4 +1,97 @@
 .edit-course {
-	float: right;
-	width: 74%;
+	padding: 0 25px 25px;
+
+	@include clearfix();
+
+	&__col {
+		float: left;
+		box-sizing: border-box;
+
+
+		&--1{
+			width: 56%;
+			padding-right: 20px;
+		}
+
+		&--2{
+			width: 44%;
+		}
+	}
+
+	label,
+	&__label {
+		display: block;
+		color: #97A4AB;
+		font-size: 14px;
+		padding-bottom: 10px;
+	}
+
+	input,
+	textarea {
+		width: 100%;
+		border: 1px solid #B0BEC5;
+		border-radius: 3px;
+		font-family: $montserrat;
+		font-size: 14px;
+		line-height: 1.1;
+		padding: 8px;
+
+		&:focus {
+			border: 1px solid #455A64;
+		}
+	}
+
+	textarea {
+		resize: vertical;
+	}
+
+	select {
+		margin-bottom: 6px;
+	}
+
+	&__row{
+		font-size: 0;
+		margin-bottom: 15px;
+	}
+
+	&__group {
+		box-sizing: border-box;
+		display: inline-block;
+		vertical-align: top;
+
+
+		&--half {
+			width: 50%;
+
+			&:first-child {
+				padding-right: 25px;
+			}
+		}
+
+		&--1 {
+			width: 30%;
+
+			.edit-course__label {
+				padding-bottom: 20px;
+			}
+
+			label {
+				font-family: $montserrat;
+				font-size: 14px;
+				color: #455A64;
+				padding-bottom: 15px;
+			}
+		}
+
+		&--2 {
+			width: 40%;
+			padding-left: 25px;
+
+			.edit-course__label {
+				padding-bottom: 20px;
+			}
+		}
+	}
+	
+
 }
