--- a/src/sass/components/edit-area.scss
+++ b/src/sass/components/edit-area.scss
@@ -35,4 +35,41 @@
 		float: right;
 	}
 
+	label {
+		display: block;
+		color: #97A4AB;
+		font-size: 14px;
+		padding-bottom: 10px;
+	}
+
+	input,
+	textarea {
+		width: 100%;
+		border: 1px solid #B0BEC5;
+		border-radius: 3px;
+		font-family: $montserrat;
+		font-size: 14px;
+		line-height: 1.1;
+		padding: 8px;
+
+		&:focus {
+			border: 1px solid #455A64;
+		}
+	}
+
+	textarea {
+		resize: vertical;
+	}
+
+	select {
+		margin-bottom: 10px;
+	}
+
+	input[type="checkbox"] + &__label {
+		font-family: $montserrat;
+		font-size: 14px;
+		color: #455A64;
+		padding-bottom: 15px;
+	}
+
 }
