--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -80,9 +80,10 @@
 @import "components/btn-action";
 @import "components/edit-area";
 @import "components/nav-tabs";
+@import "components/checkbox";
 @import "components/edit-area-alert";
 @import "components/edit-course";
-@import "components/checkbox";
+@import "components/upload-file";
 
 /*=== страницы ===*/
 @import "pages/layout";
