--- a/src/sass/components/edit-course.scss
+++ b/src/sass/components/edit-course.scss
@@ -18,36 +18,6 @@
 		}
 	}
 
-	label,
-	&__label {
-		display: block;
-		color: #97A4AB;
-		font-size: 14px;
-		padding-bottom: 10px;
-	}
-
-	input,
-	textarea {
-		width: 100%;
-		border: 1px solid #B0BEC5;
-		border-radius: 3px;
-		font-family: $montserrat;
-		font-size: 14px;
-		line-height: 1.1;
-		padding: 8px;
-
-		&:focus {
-			border: 1px solid #455A64;
-		}
-	}
-
-	textarea {
-		resize: vertical;
-	}
-
-	select {
-		margin-bottom: 6px;
-	}
 
 	&__row{
 		font-size: 0;
@@ -75,12 +45,6 @@
 				padding-bottom: 20px;
 			}
 
-			label {
-				font-family: $montserrat;
-				font-size: 14px;
-				color: #455A64;
-				padding-bottom: 15px;
-			}
 		}
 
 		&--2 {
@@ -93,5 +57,25 @@
 		}
 	}
 	
+	&__label {
+		display: block;
+		color: #97A4AB;
+		font-size: 14px;
+		padding-bottom: 10px;
+	}
 
+	&__add {
+		font-family: $montserrat;
+		font-size: 14px;
+		color: #97A4AB;
+
+		.btn--edit-add {
+			margin-left: 5px;
+		}
+	}
+
+	&__select-group {
+		margin-top: 40px;
+	}
+	
 }
