--- a/src/sass/components/page-header.scss
+++ b/src/sass/components/page-header.scss
@@ -25,10 +25,14 @@
 
   &--none{
     padding: 0;
+
+    @media (max-width: $tablet) {
+      padding: 0;
+    }
   }
 
   &--courses {
-    padding: 50px 0 0;
+    padding: 0;
   }
 
   &--course {
