added new component edit-announce

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -84,6 +84,7 @@
 @import "components/edit-area-alert";
 @import "components/edit-course";
 @import "components/upload-file";
+@import "components/edit-announce";
 
 /*=== страницы ===*/
 @import "pages/layout";
