--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -85,6 +85,7 @@
 @import "components/edit-course";
 @import "components/upload-file";
 @import "components/edit-announce";
+@import "components/edit-forum";
 
 /*=== страницы ===*/
 @import "pages/layout";
