--- a/src/sass/components/edit-nav.scss
+++ b/src/sass/components/edit-nav.scss
@@ -22,7 +22,8 @@
 		padding: 5px 25px 5px 8px;
 		line-height: 20px;
 
-		&:hover {
+		&:hover,
+		&--active {
 			border-radius: 6px;
 			background: #ffffff;
 		}
