--- a/src/sass/components/edit-area.scss
+++ b/src/sass/components/edit-area.scss
@@ -1,9 +1,19 @@
 .edit-area {
 
-
 	&__title {
 		margin: 0;
 		padding: 0 0 40px;
+	}
+
+	&__label-type {
+		display: inline-block;
+		background: #37474F;
+		font-family: $montserrat;
+		font-size: 12px;
+		color: #ffffff;
+		margin-left: 15px;
+		padding: 3px 10px;
+		border-radius: 3px;
 	}
 	
 	&__editor {
@@ -14,7 +24,7 @@
 		border-radius: 6px;
 	}
 
-	&__editor-head {
+	&__editor-header {
 		border-bottom: 1px solid #CFD8DC;
 		padding: 25px 25px 0;
 		margin: 0 0 20px;
@@ -22,9 +32,27 @@
 		@include clearfix();
 	}
 
+	&__editor-head {
+		@include clearfix();
+
+		.btn-action {
+			float: right;
+			padding: 5px 0;
+		}
+	}
+
+	&__editor-head &__editor-title {
+		float: left;
+	}
+
 	&__editor-title {
 		margin: 0;
 		padding: 0 0 35px;
+	}
+
+	&__btn-head {
+		margin: 0;
+		float: right;
 	}
 
 	.nav-tabs {
