--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -86,6 +86,7 @@
 @import "components/upload-file";
 @import "components/edit-announce";
 @import "components/edit-forum";
+@import "components/edit-videos";
 
 /*=== страницы ===*/
 @import "pages/layout";
