--- a/src/sass/components/checkbox.scss
+++ b/src/sass/components/checkbox.scss
@@ -47,5 +47,68 @@
       background-color: #ffffff;
     }
   }
+}
+
+.checkbox-able {
+  display: inline-block;
+  vertical-align: top;
+  
+  input[type="checkbox"] {
+    display: none;
+    position: relative;
+  }
+
+  label {
+    font-size: 0;
+  }
+
+  input[type="checkbox"] + label {
+    position: relative;
+    box-sizing: border-box;
+    width: 55px;
+    height: 32px;
+    border: 2px solid #D8E3EE;
+    border-radius: 20px;
+    line-height: 0;
+    margin-left: 20px;
+    color: #455A64;
+  }
+
+  input[type="checkbox"] + label::before {
+    position: absolute;
+    content: '';
+    width: 22px;
+    height: 22px;
+    top: 3px;
+    left: 3px;
+    border-radius: 50%;
+    background: url('../img/svg/x-icon.svg')  50% 50% no-repeat #455A64;
+    background-size: 10px;
+  }
+
+  input[type="checkbox"]:checked + label::before {
+    display: none;
+  }
+
+  input[type="checkbox"]:checked + label::after {
+    position: absolute;
+    content: '';
+    width: 22px;
+    height: 22px;
+    top: 3px;
+    right: 3px;
+    border-radius: 50%;
+    background: url('../img/svg/checked-white-icon.svg')  50% 50% no-repeat $green;
+    background-size: 10px;
+  }
+
+  input[type="checkbox"]:checked + label span::after {
+    position: absolute;
+    content: 'Downoadable';
+    font-family: $montserrat;
+    font-size: 13px;
+    top: -20px;
+    left: -40px;
+  }
 
 }
