--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -87,6 +87,8 @@
 @import "components/edit-announce";
 @import "components/edit-forum";
 @import "components/edit-videos";
+@import "components/edit-files";
+@import "components/add-file";
 
 /*=== страницы ===*/
 @import "pages/layout";
