added tab 'files' for page 'edit section'

--- a/src/sass/components/edit-files.scss
+++ b/src/sass/components/edit-files.scss
@@ -15,4 +15,58 @@
 		color: #90A4AE;
 		padding-left: 25px;
 	}
+
+	&__item-wrap {
+		font-size: 0;
+		margin-bottom: 15px;
+
+		@include clearfix();
+	}
+
+	&__item {
+		float: left;
+		width: 95%;
+		border: 2px solid #D8E3EE;
+    border-radius: 20px;
+    padding: 6px 12px;
+    box-sizing: border-box;
+    font-size: 14px;
+    line-height: 15px;
+    color: #818181;
+
+    svg {
+    	width: 14px;
+    	height: 14px;
+    	margin-right: 5px;
+    }
+	}
+
+	&__item-text {
+		display: inline-block;
+		vertical-align: top;
+		line-height: 15px;
+	}
+
+	&__item-delete {
+		float: right;
+		width: 5%;
+		cursor: pointer;
+		text-align: right;
+		padding-top: 9px;
+
+		svg {
+			width: 12px;
+			height: 12px;
+		}
+
+		path {
+			fill: #97A4AB;
+		}
+
+		&:hover {
+			path {
+				fill: $red;
+			}
+		}
+	}
 }
