--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -89,6 +89,8 @@
 @import "components/edit-videos";
 @import "components/edit-files";
 @import "components/add-file";
+@import "components/edit-quest";
+@import "components/btn-test";
 
 /*=== страницы ===*/
 @import "pages/layout";
