--- a/src/sass/pages/layout.scss
+++ b/src/sass/pages/layout.scss
@@ -16,9 +16,11 @@
 }
 
 .staff-main {
-	padding: 30px 0;
+  padding: 30px 0;
 }
 
-.fixed {
-  min-width: 1200px;
+.edit {
+  min-width: 1230px;
+  background-color: $gray;
+  background-image: url("../img/bg-pattern.png");
 }
