--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,5 +1,100 @@
 .footer {
-  padding: 30px 0;
-  background-color: $black;
-  color: $white;
+  &--open &__version {
+    display: block;
+  }
+
+  &__version {
+    display: none;
+    padding: 20px 0 30px;
+    background-color: #455a64;
+    color: #b0bec5;
+
+    .container,
+    .wrapper {
+      position: relative;
+
+      &::after {
+        position: absolute;
+        right: 78px;
+        bottom: -37px;
+        z-index: 20;
+        width: 15px;
+        height: 15px;
+        background-color: #455a64;
+        content: "";
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  &__version-text {
+    margin: 0;
+    margin: 20px 0;
+    font-family: $montserrat;
+    font-size: 16px;
+  }
+
+  &__text {
+    margin: 0;
+    font-size: 14px;
+  }
+
+  &__content {
+    padding: 25px 0;
+    background-color: $black;
+    color: $white;
+  }
+
+  &__copyright {
+    font-size: 14px;
+
+    a {
+      color: $white;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+
+
+  &__nav-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    font-size: 0;
+  }
+
+  &__nav-item {
+    display: inline-block;
+    margin-right: 30px;
+    vertical-align: top;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  &__nav-link {
+    color: $white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__open-version {
+    display: block;
+    color: $white;
+    text-align: right;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
