--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -23,6 +23,11 @@
         background-color: #455a64;
         content: "";
         transform: rotate(-45deg);
+
+        @media (max-width: $desktop) {
+          right: auto;
+          left: 78px;
+        }
       }
     }
   }
@@ -75,6 +80,15 @@
     margin-right: 30px;
     vertical-align: top;
 
+    @media (max-width: $desktop) {
+      display: block;
+      margin-bottom: 20px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
     &:last-child {
       margin-right: 0;
     }
@@ -95,6 +109,11 @@
     display: block;
     color: $white;
     text-align: right;
+
+    @media (max-width: $desktop) {
+      margin-bottom: 20px;
+      text-align: left;
+    }
 
     &:hover {
       text-decoration: none;
