--- a/src/sass/components/edit-nav.scss
+++ b/src/sass/components/edit-nav.scss
@@ -13,7 +13,7 @@
   &__list-item {
     margin-bottom: 5px;
   }
-  
+
   &__link {
     display: inline-block;
     vertical-align: top;
@@ -88,6 +88,12 @@
     border-bottom: 1px solid #B0BEC5;
     margin: 25px 0 10px;
     padding: 10px 0;
+
+    ul{
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
   }
 
   &__link-text {
