--- a/src/sass/components/user-courses.scss
+++ b/src/sass/components/user-courses.scss
@@ -78,6 +78,10 @@
     display: inline-block;
     vertical-align: middle;
 
+    @media (max-width: $desktop) {
+      margin-top: 15px;
+    }
+
     @media (min-width: $desktop) {
       margin-top: 0;
       border: 1px solid transparent;
